--- a/docs/journal/2019-09-29.md
+++ b/docs/journal/2019-09-29.md
@@ -1,7 +1,8 @@
 # 2019-09-29
 
 It appears that Digital Ocean can only generate certificates if it's managing the root domain.
-Meaning that if it's a subdomain that's delegated to DO you can't create a certificate.
+Meaning that if it's a subdomain that's delegated to DO you can't create a certificate via
+lets encrypt.
 
 question: I the domain was managed in AWS can you export the entire cert from ACM to use in DO?
 and what would be required to script that?  Can you export the cert from ACM and import it into
