--- a/docs/journal/2019-09-29.md
+++ b/docs/journal/2019-09-29.md
@@ -1,5 +1,7 @@
 # 2019-09-29
 
+## DNS/SSL
+
 It appears that Digital Ocean can only generate certificates if it's managing the root domain.
 Meaning that if it's a subdomain that's delegated to DO you can't create a certificate via
 lets encrypt.
@@ -7,3 +9,27 @@ lets encrypt.
 question: I the domain was managed in AWS can you export the entire cert from ACM to use in DO?
 and what would be required to script that?  Can you export the cert from ACM and import it into
 DO entirely from API?
+
+## Pricing
+
+DO loadbalancers have a fixed cost of 0.015/hr ($10/mth).  So it would make sense to either use
+nginx ingress of ha-proxy.
+
+  * https://www.haproxy.com/blog/dissecting-the-haproxy-kubernetes-ingress-controller/
+
+## HA-Proxy Ingest
+
+  Follow the instructions for createing the ha proxy ingest controller.
+  the edit it and switch it from NodePort to LoadBalancer.
+
+  This will create the load balancer.
+
+  After it has an IP Update the DNS to use that load balancer
+
+  set HTTP to redirect to HTTPS
+
+  Then set the forwarding rules to look something like this
+
+     TCP on port 80  TCP on port 31015               <- delete
+     HTTPS on port 443  HTTP on port 30348           <- update to use https and cert
+     TCP on port 1024  TCP on port 31490             <- delete or restrict
