--- a/docs/journal/2019-09-29.md
+++ b/docs/journal/2019-09-29.md
@@ -19,17 +19,30 @@ nginx ingress of ha-proxy.
 
 ## HA-Proxy Ingest
 
-  Follow the instructions for createing the ha proxy ingest controller.
-  the edit it and switch it from NodePort to LoadBalancer.
+Follow the instructions for createing the ha proxy ingest controller.
+the edit it and switch it from NodePort to LoadBalancer.
 
-  This will create the load balancer.
+This will create the load balancer.
 
-  After it has an IP Update the DNS to use that load balancer
+After it has an IP Update the DNS to use that load balancer
 
-  set HTTP to redirect to HTTPS
+set HTTP to redirect to HTTPS
 
-  Then set the forwarding rules to look something like this
+Then set the forwarding rules to look something like this
 
      TCP on port 80  TCP on port 31015               <- delete
      HTTPS on port 443  HTTP on port 30348           <- update to use https and cert
      TCP on port 1024  TCP on port 31490             <- delete or restrict
+
+
+## TODO
+
+Create a static landing page with an nginx image
+
+How do I really want to handle docker registry?
+
+  * https://www.digitalocean.com/community/tutorials/how-to-set-up-a-private-docker-registry-on-top-of-digitalocean-spaces-and-use-it-with-digitalocean-kubernetes
+  * https://www.digitalocean.com/community/questions/private-docker-registry
+  * https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+
+
