--- a/docs/journal/2019-10-13.md
+++ b/docs/journal/2019-10-13.md
@@ -1,18 +1,21 @@
 # 2019-10-13
 
-This is my first experiment with GKE.  The goal here is just
-to get something up and running that can be improved on later.
+This is my first experiment with GKE.
+
+The goal here is just to get something up and running that can be improved on later.
 
 ## GKE
 
 ```
-# TODO: set the organization and create a project
+# TODO: add instructions to set the organization and create project
 $> gcloud config set project logic-refinery-com
 ```
 
 ## Create cluster
 
-First create the cluster
+First create the cluster.
+
+I need to explore these options better.
 
 ```
 gcloud beta container \
@@ -32,6 +35,8 @@ gcloud beta container \
 
 ## Get Cluster Credentials
 
+Get the credentials from the cluster we just created so that `kubectl` can connect.
+
 ```
 gcloud container clusters get-credentials production
 ```
@@ -45,8 +50,15 @@ kubectl apply -f app.yaml
 
 ## Deploy Proxy
 
-First edit the proxy config so that it has the cluster ips of www and app then deploy it
+The haproxy config currently uses the cluster ips to direct traffic to each service but these will change the first time you deploy the service.
 
+The easiest way to fix this would be if dns worked in the cluster but that addon doesn't seem to be enabled.
+
+So for now edit the config so the IP addresses match the services.
+
+do a `kubectl get services` to get the IPs of the www and app service and set them in the config.
+
+The update that image and apply the config
 
 ```
 kubectl apply -f proxy.yaml
@@ -56,7 +68,9 @@ kubectl apply -f proxy.yaml
 ## Firewall
 
 Create a firewall rule that will allow the loadbalancer
-to send traffic to the cluster
+to send traffic to the cluster.
+
+Todo this I have to extgract the cluster tag some how?
 
 ```
 gcloud compute \
@@ -71,9 +85,16 @@ gcloud compute \
   --target-tags=gke-production-c0f99aed-node
 ```
 
-
 create load balancer
 
+The backend will send traffic to 30080 and will also healthcheck on that port.
+
+The front end should accept traffic on both 80 and 443.
+
+Traffic on 80 will get redirected back to 443 by the proxy in the cluster.
+
+The secure traffic whould be using the fixed ip of logic-refinery
+
 ```
-#TODO: creat the load balancer
+#TODO: figure out the gcloud command line to create the load balancer
 ```
